Storing User Secrets

--- a/99-practice/Platform/Platform.csproj
+++ b/99-practice/Platform/Platform.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>78d6d9ad-7da5-45ab-8195-55762ad09772</UserSecretsId>
   </PropertyGroup>
 
 </Project>
