--- a/99-practice/Platform/appsettings.Development.json
+++ b/99-practice/Platform/appsettings.Development.json
@@ -5,7 +5,7 @@
       "System": "Information",
       "Microsoft": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Routing": "Debug"
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
   "services": {
