--- a/99-practice/Platform/Properties/launchSettings.json
+++ b/99-practice/Platform/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5122;https://localhost:5500",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
