--- a/99-practice/21_Using_Controllers_with_Views_1/WebApp/WebApp.csproj
+++ b/99-practice/21_Using_Controllers_with_Views_1/WebApp/WebApp.csproj
@@ -17,6 +17,6 @@
   </ItemGroup>
   <PropertyGroup>
     <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <!-- <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles> -->
     </PropertyGroup>
 </Project>
