--- a/98-EFC/02-ExistingDatabase/EFCore_Activity0201/appsettings.json
+++ b/98-EFC/02-ExistingDatabase/EFCore_Activity0201/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "AdventureWorks": "Data Source=localhost;Initial Catalog=AdventureWorks;Trusted_Connection=True"
+    "AdventureWorks": "Server=10.66.11.123;User Id=sa;Password=oZPS0POrRieRtu;Initial Catalog=AdventureWorks;Trusted_Connection=True"
   }
 }
