--- a/99-practice/07-UsingIdentityAPI/IdentityApp/appsettings.json
+++ b/99-practice/07-UsingIdentityAPI/IdentityApp/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "BearerTokens": {
+    "ExpiryMins": "60",
+    "Key": "mySuperSecretKey"
   }
 }
