--- a/99-practice/Ultimate.ASP.NET.Core.Web.API/Repository/Repository.csproj
+++ b/99-practice/Ultimate.ASP.NET.Core.Web.API/Repository/Repository.csproj
@@ -2,6 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
   <PropertyGroup>
