--- a/99-practice/Ultimate.ASP.NET.Core.Web.API/CompanyEmployees.Presentation/CompanyEmployees.Presentation.csproj
+++ b/99-practice/Ultimate.ASP.NET.Core.Web.API/CompanyEmployees.Presentation/CompanyEmployees.Presentation.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.7" />
   </ItemGroup>
 
   <ItemGroup>
